--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <p>Per questo motivo, i reumatologi giapponesi ripristinano principalmente la circolazione sanguigna nell'articolazione colpita, in modo che i sali accumulati nel corso degli anni vengano eliminati. Ciò, a sua volta, ripristina la normale circolazione del liquido sinoviale e inizia il processo di rigenerazione dei tessuti articolari.</p>
 <img alt="" src="images/Group%20228.png">
 <p>In realtà, le articolazioni umane sono altamente rigenerative e possono ripararsi da sole, come la coda di una lucertola. Hanno solo bisogno di un piccolo aiuto per farlo: liberarsi dei sali "intrappolati" al loro interno, e il processo si attiverà.</p>
-<p>Negli anni '90, gli scienziati svizzeri riuscirono a ottenere una forma speciale di quasi-vitamina B, chiamata alfa-artroferolo. Viene prodotto tramite la sintesi di ingredienti naturali: veleno di serpente, grasso di squalo e oltre 50 diversi estratti. Finora non esiste nulla di più efficace per attivare la circolazione sanguigna nelle ossa e nelle articolazioni. Si può immaginare la forza biologica di un tale meccanismo?</p>
+<p>Negli anni '90, gli scienziati svizzeri riuscirono a ottenere una forma speciale di quasi-vitamina B, chiamata alfa-artroferolo. Viene prodotto tramite la sintesi di ingredienti naturali: veleno di serpente, grasso di squalo e oltre 50 diversi estratti. Finora non esiste nulla di più efficace per attivare la circolazione sanguigna nelle ossa e nelle articolazioni.</p>
 <p>Questa sostanza è in grado di penetrare nelle molecole di sale e romperle dall'interno: di conseguenza, la superficie delle articolazioni viene pulita, il flusso sanguigno e la circolazione del liquido sinoviale vengono ripristinati. E questo per sempre! Più precisamente, fino a quando i sali si accumuleranno di nuovo (il che richiederà diversi decenni). Non è più necessario prendere COSTANTEMENTE FARMACI per alleviare il dolore e l'infiammazione. Non c'è bisogno di temere che un giorno un'articolazione "si paralizzi" permanentemente, diventi completamente immobile e necessiti di una protesi. Le persone restano completamente sane per decenni.</p>
 <img alt="" src="images/1.gif">
 <p>Quando ho visto le statistiche mediche italiane, sono rimasto sbalordito. Lei sa qual è la causa più comune di invalidità in Italia? Non è il cancro, l'AIDS o il diabete, ma l'artrosi! L'artrosi, che in Giappone viene trattata in 4 o 5 settimane con metodi relativamente semplici e accessibili, in Italia può richiedere anni e persino lasciare una persona disabile!</p>
@@ -148,7 +148,7 @@
 <p>Le persone comuni, specialmente quelle con più di 50 anni, affrontano maggiori difficoltà a causa dei ritardi nei trattamenti medici rispetto ad altre fasce d'età. Non è colpa loro, ma del sistema sanitario.</p>
 <p>Fortunatamente, c'è una soluzione: è stato creato un sito web ufficiale speciale dove qualsiasi residente in Italia può richiedere Fortuflex con uno sconto incredibile.</p>
 <p>Distribuiamo Fortuflex da tre mesi. Migliaia di italiani hanno già approfittato di questa opportunità. Abbiamo chiesto a tutti coloro che hanno ricevuto Fortuflex di valutare l'efficacia del prodotto su una scala da 1 a 10. Finora, oltre 3000 persone hanno partecipato al sondaggio e il punteggio medio del prodotto è 9,97 su 10.</p>
-<p>Come vedete, Fortuflex ha aiutato l'50% di migliaia di italiani a recuperare la loro mobilità e a liberarsi dal dolore. Anche voi potete approfittare di questa offerta!</p>
+<p>Come vedete, Fortuflex ha già aiutato migliaia di italiani a ripristinare la mobilità e a liberarsi dal dolore. Anche voi potete approfittare di questa offerta!</p>
 <p><b>Quanto durerà lo sconto su questa fantastica crema?</b></p>
 <p>Fino a esaurimento dello stock speciale. Tuttavia, sono rimasti pochissimi articoli. Gli ordini aumentano ogni giorno e il metodo del "passaparola" sta funzionando; le persone stanno condividendo le informazioni, raccomandando il prodotto agli amici e chiedendo informazioni per i loro cari. Non ci aspettavamo che le informazioni su Fortuflex si diffondessero così rapidamente in Italia.</p>
 <p>Consiglio a tutti coloro che hanno problemi articolari di richiedere Fortuflex sul sito web e di approfittare dello sconto finché l'offerta è disponibile. E ricordate sempre che la nostra salute è la cosa più importante e preziosa che abbiamo.</p>
@@ -196,24 +196,17 @@
 
 
 <div id="order_form_place">
-<center> <img class="logo_blank" src="images/med.png">
-<h2>Modulo Ufficiale di Richiesta</h2><span style="color: blue; font-size: 14px;">№29982 di 30000 disponibili</span>
-<script>
-													(() => {
-														document.write((new Date()).toLocaleDateString('bg', {
-															"dateStyle": "short"
-														}))
-													})();
-												</script>
-
-</center>
 <span style="font-size: 16px;">
     Come ottenere Fortuflex al prezzo ridotto<b style="color: red;"><span class="price_main"></span></b>
 </span>
 </div>
 <p style="margin-bottom: 0;"><img src="images/1710341822.png" style="width: 250px; display: block; margin: 16px auto 0;"></p>
-<div> <span style="text-decoration: line-through; font-size: 16px;">145 €</span> <br><span style="color: red; font-size: 24px; font-weight: bold;">29 €</span></div>
-<div style="margin: 15px 10px -5px 10px; border: 2px solid #0299ff; padding: 10px;"> Per <span><b>ottenere il prodotto con uno sconto dell'50%, inserisci il tuo nome e numero di telefono nei campi sottostanti e clicca sul pulsante "RICHIEDI"</b></span>.</div>
+<div style="    display: flex; align-items: center; gap: 8px; margin: 0 auto; max-width: 105px;"> <span style="text-decoration: line-through; font-size: 16px;">78 €</span> <br><span style="color: red; font-size: 24px; font-weight: bold;">39 €</span></div>
+	<h3> Tutto ciò che dovete fare è inserire il vostro nome e numero di telefono.
+		<br>Affrettatevi! Vi resta ancora poco tempo:
+		<br><span class="time_remains" id="min">10</span> :
+		<span class="time_remains" id="sec">00</span>
+	</h3>
 <div class="order_form_pole">
 <label>Il tuo nome:</label>
 <div class="input-group tooltip-hide">
@@ -227,7 +220,7 @@
 </div>
 </div>
 <div style="margin-bottom: 20px;">
-<button class="js_submit button__text" type="submit">RICHIEDI</button>
+<button class="js_submit button__text" type="submit">ORDINA</button>
 <div class="ring-loading"></div>
 </div>
 <div class="timelimit">
@@ -251,7 +244,7 @@
 <div class="quantity">33 commenti oggi</div>
 <div class="comments">
 <div class="comment">
-<img alt="" class="avatar" src="images/1.jpg">
+<img alt="" class="avatar" src="images/3.png">
 <div class="comm_text">
 <p class="user_name">Maria Rossi</p>
 <p class="text">Dr. Shigeaki, grazie mille per questo prodotto. Lo cercavo da molto tempo e non vedo l'ora di ricevere il mio pacco. Grazie!</p>
@@ -274,16 +267,16 @@
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
-<img alt="" class="avatar" src="images/4.jpg">
-<div class="comm_text">
-<div class="comment">
+	<img alt="" class="avatar" src="images/4.jpg">
 <div class="comm_text">
 <p class="user_name">Gabriele Russo</p>
 <p class="text">Grazie per questo prodotto, Dr. Shigeaki! Sta aiutando molte persone nel nostro paese. Ho deciso di provare Fortuflex per la mia schiena. Ho l'osteocondrosi e ha davvero aiutato. Credo che ora andrà tutto bene!</p>
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/555.jpg">
 <div class="comm_text">
@@ -291,6 +284,7 @@
 <p class="text">Gabriele, non preoccuparti e continua a usare <a scroll="goScrollToForm">Fortuflex</a>, ma non dimenticare di seguire le istruzioni per l'uso di questa crema.</p>
 <p class="text">Cordiali saluti, Dr. Shigeaki.</p>
 <p class="time">un'ora fa</p>
+</div>
 </div>
 <div class="comment">
 <img alt="" class="avatar" src="images/6.jpg">
@@ -300,6 +294,7 @@
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/7.jpg">
 <div class="comm_text">
@@ -308,6 +303,7 @@
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/8.jpg">
 <div class="comm_text">
@@ -316,6 +312,7 @@
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/9.jpg">
 <div class="comm_text">
@@ -324,6 +321,7 @@
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/8.jpg">
 <div class="comm_text">
@@ -331,6 +329,8 @@
 <p class="text">Grazie, Cristoforo. Ho appena fatto l'ordine. Quanto tempo ci vorrà per arrivare?</p>
 <p class="time">un'ora fa</p>
 </div>
+</div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/9.jpg">
 <div class="comm_text">
@@ -339,6 +339,7 @@
 <p class="time">un'ora fa</p>
 </div>
 </div>
+
 <div class="comment">
 <img alt="" class="avatar" src="images/10.jpg">
 <div class="comm_text">
@@ -348,7 +349,7 @@
 </div>
 </div>
 <div class="comment">
-<img alt="" class="avatar" src="images/11.jpg">
+<img alt="" class="avatar" src="images/15.png">
 <div class="comm_text">
 <p class="user_name">Martino Pellegrini</p>
 <p class="text">Irene, è davvero così efficace? Forse dovrei ordinarlo anch'io. Dopo tutto, è scontato dell'50%, giusto?</p>
@@ -396,7 +397,7 @@
 </div>
 </div>
 <div class="comment">
-<img alt="" class="avatar" src="images/17.jpg">
+<img alt="" class="avatar" src="images/14.png">
 <div class="comm_text">
 <p class="user_name">Silvia Rossi</p>
 <p class="text">Grazie, Dr. Shigeaki! Se non fosse per lei, non avrei creduto nell'efficacia di Fortuflex. Mio marito, che ha sofferto molto per 5 anni, ora corre come se avesse di nuovo 18 anni! Il pacco è arrivato anche molto velocemente.</p>
@@ -413,7 +414,7 @@
 </div>
 </div>
 <div class="comment">
-<img alt="" class="avatar" src="images/17.jpg">
+<img alt="" class="avatar" src="images/14.png">
 <div class="comm_text">
 <p class="user_name">Silvia Rossi</p>
 <p class="text">Dr. Shigeaki, si è ripreso in circa un mese. Ora può muoversi liberamente e non si lamenta più come prima. Sono molto felice per lui.</p>
